fix alignment Feed

--- a/src/utils/styles/utils.css
+++ b/src/utils/styles/utils.css
@@ -10,3 +10,11 @@
 .flex-autofill {
   flex: 1 1 100%;
 }
+
+.vw-40 {
+	width: 40vw;
+}
+
+.vw-60 {
+	width: 60vw;
+}
